--- a/webPage/index.html
+++ b/webPage/index.html
@@ -25,8 +25,9 @@
             $(document).ready(function() {
                 $.ajax({
                     type: 'GET',
-                    url: "http://localhost:8000/cali-fire-analysis/new_fire_weather_data.csv",
+                    url: "http://192.168.1.86:8080/cali-fire-analysis/data/new_fire_weather_data.csv",
                     dataType: "text",
+                    crossDomain: true,
                 }).done(processData)
             });
             //map options and stuff
@@ -53,7 +54,7 @@
             */
             //addMarker({lat:36.11, lng:-120.11});
             var icon = {
-                url: 'http://localhost:8000/cali-fire-analysis/webPage/images/icons.png',
+                url: 'http://192.168.1.86:8080/cali-fire-analysis/webPage/images/icons.png',
                 scaledSize: new google.maps.Size(15, 15)
             };
 
@@ -114,7 +115,10 @@
         <input type="text" id="end" name="e"><br><br>
         <input type="submit" onclick="initMap(start=parseInt(s),end=parseInt(ed))" name="Submit">
     </form>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7Hk_IEsxv1AtMi4_9oYAyfCTeiIEN8aQ&callback=initMap"></script>
+
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz2YGR_-Pze5ti0sPAJFca_EMhzETkOKQ&callback=initMap">
+    </script>
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
