--- a/webPage/index.html
+++ b/webPage/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <!--This line to get rid of the fav icon error-->
+    <link rel="shortcut icon" href="#">
 
     <meta charset="utf-8">
     <title>California Fire Maps</title>
@@ -20,14 +22,16 @@
     <h1>Map of California Fires(2013-2020)</h1>
     <div id="map"></div>
     <script>
-        function initMap(start = 2010, end = 2020) {
-            console.log(start);
+        function initMap(start = 2018, end = 2018) {
+            //reading the csv file with all the data 
+
+
+
             $(document).ready(function() {
                 $.ajax({
                     type: 'GET',
-                    url: "http://192.168.1.86:8080/cali-fire-analysis/data/new_fire_weather_data.csv",
+                    url: "../data/new_fire_weather_data.csv",
                     dataType: "text",
-                    crossDomain: true,
                 }).done(processData)
             });
             //map options and stuff
@@ -54,7 +58,7 @@
             */
             //addMarker({lat:36.11, lng:-120.11});
             var icon = {
-                url: 'http://192.168.1.86:8080/cali-fire-analysis/webPage/images/icons.png',
+                url: 'images/icons.png',
                 scaledSize: new google.maps.Size(15, 15)
             };
 
@@ -72,56 +76,59 @@
 
                 var allTextLines = allText.split(/\r\n|\n/);
                 var headers = allTextLines[0].split(',');
-
-
-                for (var i = 1; i < allTextLines.length; i++) {
+                //it can read the entire file and get where all the fires are
+                //console.log(allTextLines);
+                console.log(headers);
+                //only care about header 1,7,8 data long/lat
+                for (var i = 1; i < allTextLines.length - 1; i++) {
                     var data = allTextLines[i].split(',');
-                    if (data.length == headers.length) {
+                    console.log(i);
+                    //if (data.length == headers.length) {
 
-                        var tarr = [];
-                        for (var j = 0; j < headers.length; j++) {
-                            if (headers[j] == "incident_latitude" || headers[j] == "incident_longitude" || headers[j] == "incident_date_created") {
-                                tarr.push(data[j]);
-                            }
+                    var tarr = [];
+                    for (var j = 0; j < headers.length; j++) {
+                        if (headers[j] == "incident_latitude" || headers[j] == "incident_longitude" || headers[j] == "incident_date_created") {
+                            tarr.push(data[j]);
                         }
-                        lines.push(tarr);
-
-
-                        if (startYear < parseInt(tarr[0].substring(0, 4)) && parseInt(tarr[0].substring(0, 4)) < endYear) {
-
-                            addMarker({
-                                lat: parseFloat(tarr[2]),
-                                lng: parseFloat(tarr[1])
-                            });
-                        } else {
-                            addMarker({
-                                lat: parseFloat(tarr[2]),
-                                lng: parseFloat(tarr[1])
-                            });
-                        }
-
                     }
+                    lines.push(tarr);
+
+                    //console.log(typeof(parseInt(tarr[0].substring(0, 4))));
+                    //console.log(typeof(start));
+
+                    if (start <= parseInt(tarr[0].substring(0, 4)) && parseInt(tarr[0].substring(0, 4)) <= end) {
+
+                        addMarker({
+                            lat: parseFloat(tarr[2]),
+                            lng: parseFloat(tarr[1])
+                        });
+                    } else {
+                        console.log("The fire did not happen in this year");
+                    }
+
+                    //}
                 }
-                console.log(lines);
+                //console.log(start)
+
 
             }
-
+            console.log($('#start'));
         }
     </script>
-    <form>
-        <label for="fname">Start Year:</label>
-        <input type="text" id="start" name="s"><br><br>
-        <label for="lname">End Year:</label>
-        <input type="text" id="end" name="e"><br><br>
-        <input type="submit" onclick="initMap(start=parseInt(s),end=parseInt(ed))" name="Submit">
+    <form name="query" onsubmit="initMap()">
+        <label for=" fname ">Start Year:</label>
+        <input type="text" id="start" name="start"><br><br>
+        <label for="lname ">End Year:</label>
+        <input type="text " id="end" name="end"><br><br>
+        <input type="submit" value="Submit" name="Submit">
     </form>
 
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz2YGR_-Pze5ti0sPAJFca_EMhzETkOKQ&callback=initMap">
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz2YGR_-Pze5ti0sPAJFca_EMhzETkOKQ&callback=initMap ">
     </script>
 
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css " rel="stylesheet " integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x " crossorigin="anonymous ">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js " integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4 " crossorigin="anonymous "></script>
 
 </body>
 
